--- a/css/sass/_main.scss
+++ b/css/sass/_main.scss
@@ -72,10 +72,10 @@
 .our-workflow {
     padding-top: 100px;
     padding-bottom: 100px;
-    background-color: #F5F4FF;
+    background-color: #EEEDFC;
 
     &__title {
-        font-size: 40px;
+        font-size: 48px;
     }
 
     &__wrapper {
@@ -108,5 +108,155 @@
                 }
             }
         }
+    }
+}
+
+.testimonials {
+    background-color: #F7F7FB;
+    padding-top: 100px;
+    padding-bottom: 100px;
+
+    &__title {
+        font-size: 48px;
+    }
+
+
+    .card {
+        background-color: #282464;
+        color: #fff;
+        border-radius: 22px;
+        position: relative;
+        overflow: hidden;
+        padding-inline-start: 2rem;
+
+        &__quote {
+            font-size: 24px;
+            margin-bottom: 3rem;
+            font-weight: 300;
+
+        }
+
+        .author {
+            &__name {
+                font-size: 16px;
+                font-weight: 400;
+            }
+
+            &__problem {
+                font-size: 14px;
+                font-weight: 400;
+            }
+        }
+    }
+
+    .slick-initialized .slick-slide {
+        margin-inline-end: 24px;
+    }
+
+    .container {
+        position: relative;
+    }
+
+    button.next-arrow.slick-arrow,
+    button.prev-arrow.slick-arrow {
+        background-color: transparent;
+        border: none;
+        position: absolute;
+        content: '';
+        top: -75px;
+        right: 0;
+
+        &:focus {
+            outline: none;
+        }
+
+        &.slick-disabled {
+            img {
+
+                opacity: 0.5;
+            }
+        }
+    }
+
+    button.prev-arrow.slick-arrow {
+        transform: rotate(180deg);
+        right: 70px;
+        top: -74px;
+    }
+
+    .slick-dots li button:before {
+        font-size: 50px;
+        top: 30px;
+    }
+
+    .slick-dots li.slick-active button:before {
+        color: #262262;
+    }
+
+}
+
+
+.faq {
+    padding-top: 100px;
+    padding-bottom: 100px;
+
+    &__title {
+        font-size: 48px;
+    }
+
+    &__wrapper {
+        background-color: #F7F7FB;
+        padding: 80px 40px;
+        border-radius: 24px;
+    }
+
+    .accordion-item {
+        margin-bottom: 10px;
+        box-shadow: 0px 5px 16px 0px #080F340F;
+        border-radius: 16px;
+        border: none;
+        width: 46%;
+        margin-inline-end: 1%;
+        margin-inline-start: 1%;
+        display: inline-block;
+        height: fit-content;
+    }
+
+    .accordion-button {
+        color: #170F49;
+        background-color: transparent;
+        box-shadow: none;
+        font-size: 22px;
+        padding: 35px 20px;
+
+        &:focus {
+            box-shadow: none !important;
+        }
+    }
+
+    .accordion-body {
+        color: #6F6C90;
+        font-size: 18px;
+        font-weight: 300;
+    }
+
+    .accordion-button::after {
+        content: '\002B';
+        background: #F6F6FF;
+        border-radius: 8px;
+        padding: 3px;
+        top: 36%;
+        position: absolute;
+        right: 20px;
+        width: 35px;
+        height: 35px;
+        line-height: 30px;
+        padding-left: 11px;
+    }
+
+    .accordion-button[aria-expanded="true"]::after {
+        content: '\2212';
+        background-color: #4A3FD8;
+        color: #fff;
     }
 }
