--- a/css/index.css
+++ b/css/index.css
@@ -70,6 +70,63 @@ body {
   font-size: 24px;
 }
 
+.top-slider {
+  border-bottom-left-radius: 220px;
+  position: relative;
+  background: #F6F6FF;
+  /* slider buttons */
+  /* slider buttons */
+}
+.top-slider button.main-next-arrow.slick-arrow,
+.top-slider button.main-prev-arrow.slick-arrow {
+  background-color: transparent;
+  border: none;
+  position: absolute;
+  content: "";
+  top: 40%;
+}
+.top-slider button.main-next-arrow.slick-arrow:focus,
+.top-slider button.main-prev-arrow.slick-arrow:focus {
+  outline: none;
+}
+.top-slider button.main-next-arrow.slick-arrow.slick-disabled img,
+.top-slider button.main-prev-arrow.slick-arrow.slick-disabled img {
+  opacity: 0;
+}
+.top-slider button.main-next-arrow.slick-arrow {
+  transform: rotate(180deg);
+  left: 50px;
+}
+.top-slider button.main-prev-arrow.slick-arrow {
+  right: 50px;
+}
+.top-slider .slick-dots li button:before {
+  font-size: 50px;
+  top: -40px;
+}
+.top-slider .slick-dots li.slick-active button:before {
+  color: #262262;
+}
+.top-slider__title {
+  font-size: 48px;
+}
+.top-slider__content {
+  font-size: 28px;
+  margin-bottom: 32px;
+}
+.top-slider__contact-us {
+  background-color: #170F49 !important;
+  font-size: 24px !important;
+}
+.top-slider__image {
+  background-color: #fff;
+  border-radius: 65px;
+  overflow: hidden;
+}
+.top-slider__image img {
+  width: 100%;
+}
+
 .about {
   padding-top: 100px;
   padding-bottom: 100px;
