change fonts and favicon

--- a/css/sass/_fonts.scss
+++ b/css/sass/_fonts.scss
@@ -1,28 +1,28 @@
 @font-face {
-    font-family: 'Montserrat';
-    src: url('../../fonts/Montserrat-Bold.otf');
+    font-family: 'Manrope';
+    src: url('../../fonts/Manrope-Bold.ttf');
     font-weight: 700;
 }
 
 @font-face {
-    font-family: 'Montserrat';
-    src: url('../../fonts/Montserrat-Medium.otf');
+    font-family: 'Manrope';
+    src: url('../../fonts/Manrope-SemiBold.ttf');
     font-weight: 500;
 }
 
 @font-face {
-    font-family: 'Montserrat';
-    src: url('../../fonts/Montserrat-Medium.otf');
+    font-family: 'Manrope';
+    src: url('../../fonts/Manrope-Regular.ttf');
     font-weight: 400;
 }
 
 @font-face {
-    font-family: 'Montserrat';
-    src: url('../../fonts/Montserrat-Light.otf');
+    font-family: 'Manrope';
+    src: url('../../fonts/Manrope-Light.ttf');
     font-weight: 300;
 }
 
 
 body {
-    font-family: "Montserrat", "sans-serif", "arial";
+    font-family: "Manrope", "sans-serif", "arial";
 }
