--- a/css/index.css
+++ b/css/index.css
@@ -72,6 +72,7 @@ body {
 
 .top-slider {
   border-bottom-left-radius: 220px;
+  border-bottom-right-radius: 220px;
   position: relative;
   background: #F6F6FF;
   /* slider buttons */
@@ -112,9 +113,9 @@ body {
 }
 .top-slider__content {
   font-size: 28px;
-  margin-bottom: 32px;
 }
 .top-slider__contact-us {
+  margin-top: 32px;
   background-color: #170F49 !important;
   font-size: 24px !important;
   border: none !important;
