--- a/css/sass/_main.scss
+++ b/css/sass/_main.scss
@@ -119,6 +119,11 @@
     padding-bottom: 52px;
     background-color: #F5F4FF;
 
+
+    &__img-container {
+        margin-bottom: 40px;
+    }
+
     &__header {
         font-size: 32px;
     }
