--- a/css/index.css
+++ b/css/index.css
@@ -238,69 +238,55 @@ body {
   max-width: 100%;
 }
 
-.testimonials {
-  background-color: #F7F7FB;
+.treatable-cases {
+  margin-top: 56px;
+  padding: 56px 48px 20px;
+  background: conic-gradient(from 61.9deg at 49.58% 49.36%, rgba(201, 189, 255, 0.2) 0deg, rgba(181, 181, 255, 0.12) 322.08deg, rgba(201, 189, 255, 0.2) 360deg);
+  border-radius: 40px;
+}
+.treatable-cases__title {
+  font-size: 48px;
+  margin-bottom: 32px;
+}
+.treatable-cases .card {
+  padding: 32px 24px 32px 24px;
+  border-radius: 32px;
+  border: 1px solid #DFDDFF;
+  text-align: center;
+  height: 100%;
+}
+.treatable-cases .card__title {
+  font-size: 24px;
+}
+.treatable-cases .card__description {
+  font-size: 18px;
+  color: #3F3F3F;
+}
+
+.videos {
   padding-top: 100px;
   padding-bottom: 100px;
 }
-.testimonials__title {
+.videos__title {
   font-size: 48px;
 }
-.testimonials .card {
-  background-color: #282464;
-  color: #fff;
-  border-radius: 22px;
-  position: relative;
-  overflow: hidden;
-  padding-inline-start: 2rem;
-}
-.testimonials .card__quote {
-  font-size: 24px;
-  margin-bottom: 3rem;
-  font-weight: 300;
-}
-.testimonials .card .author__name {
-  font-size: 16px;
-  font-weight: 400;
-}
-.testimonials .card .author__problem {
-  font-size: 14px;
-  font-weight: 400;
-}
-.testimonials .slick-initialized .slick-slide {
-  margin-inline-end: 24px;
-}
-.testimonials .container {
+.videos__video-container {
   position: relative;
 }
-.testimonials button.next-arrow.slick-arrow,
-.testimonials button.prev-arrow.slick-arrow {
-  background-color: transparent;
-  border: none;
+.videos__video-container img {
+  cursor: pointer;
+  height: 500px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 40px;
+}
+.videos__video-container video {
+  display: none;
   position: absolute;
-  content: "";
-  top: -75px;
-  right: 0;
-}
-.testimonials button.next-arrow.slick-arrow:focus,
-.testimonials button.prev-arrow.slick-arrow:focus {
-  outline: none;
-}
-.testimonials button.next-arrow.slick-arrow.slick-disabled img,
-.testimonials button.prev-arrow.slick-arrow.slick-disabled img {
-  opacity: 0.5;
-}
-.testimonials button.prev-arrow.slick-arrow {
-  transform: rotate(180deg);
-  right: 70px;
-  top: -74px;
-}
-.testimonials .slick-dots li button:before {
-  font-size: 50px;
-  top: 30px;
-}
-.testimonials .slick-dots li.slick-active button:before {
-  color: #262262;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .faq {
