--- a/css/index.css
+++ b/css/index.css
@@ -197,6 +197,17 @@ body {
   font-size: 18px;
 }
 
+.what-is-included {
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+.what-is-included__title {
+  font-size: 40px;
+}
+.what-is-included .card__title {
+  font-size: 24px;
+}
+
 .products-and-kit {
   padding-top: 100px;
   padding-bottom: 100px;
