--- a/css/sass/_main.scss
+++ b/css/sass/_main.scss
@@ -162,6 +162,20 @@
     }
 }
 
+.what-is-included {
+    padding-top: 100px;
+    padding-bottom: 100px;
+
+    &__title {
+        font-size: 40px;
+    }
+
+    .card {
+        &__title {
+            font-size: 24px;
+        }
+    }
+}
 
 .products-and-kit {
     padding-top: 100px;
